fix for intro fadeout and z-index

--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ img{border:none;}
 .disable:hover{cursor:default;}
 
 #logo	{left:4px; top:0;font-family:'extravaganzzaBold';}
-#intro {width:100%; height:100%; background:rgba(0,0,0,0.7); z-index:3150000;}
+#intro {width:100%; height:100%; background:rgba(0,0,0,0.4); top:0; left:0; position:absolute; z-index:3150000;}
 	#intro-container {position:absolute;top:50%;left:50%;margin:-200px 0 0 -180px;}
 	#intro-container img {display:block;}
 	#intro-container img#loading {margin-left:155px;}
